--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -88,10 +88,10 @@
                                 ->setMinDepth(0)
                                 ->setLinkLast(true)
                                 ->setSeparator(" &raquo; " . PHP_EOL) . '</div><hr></hr><p>';
-                    }}else{
+                    }else{
                         echo '<div class="breadcrumb">Estas en: <a href="/"> Inicio </a> &raquo; ' .
                                 $this->breadcrumbs . '</div><hr></hr><p>';
-                    }
+                    }}
                     ?>
                     <div id="content_wrapper">
 
