--- a/application/modules/default/views/scripts/partial/listaProductosPaginator.phtml
+++ b/application/modules/default/views/scripts/partial/listaProductosPaginator.phtml
@@ -6,7 +6,7 @@
 
                     <div>
                         <a href="<?php echo $this->baseUrl(); ?>/productos/detalle-producto/<?php echo $index['SlugProducto'] ?>" title="<?php echo $index['NombreProducto'] ?>">
-                            <img class="img_product" src="<?php echo CST_Server_ServerDinamic::getUrl(); ?>/imagen-producto/<?php echo $index['ImagenProducto'] ?>?<?php echo rand(0, 1000); ?>" alt="<?php echo $index['NombreProducto'] ?>" />
+                            <img class="img_product" src="<?php echo CST_Server_ServerDinamic::getUrl(); ?>/img/imagen-producto/<?php echo $index['ImagenProducto'] ?>?<?php echo rand(0, 1000); ?>" alt="<?php echo $index['NombreProducto'] ?>" />
                         </a>
                     </div>
                     <h5 class="title_producto">
