--- a/application/modules/default/views/scripts/productos/detalle-producto.phtml
+++ b/application/modules/default/views/scripts/productos/detalle-producto.phtml
@@ -1,69 +1,79 @@
-<div class="grid_5" >Columna Izquierda
+<div class="productos_colum_izq" >
     <?php
     $pagerData = array(
         'getPathInfo' => $this->getPathInfo,
+        'listaMarcas' => $this->listaMarcas,
+        'slugMarcaFiltro' => $this->slugMarca,
         'listaCategoriasNavigator' => $this->listaCategoriasNavigator
     );
     echo $this->partial('/partial/menucategorias.phtml', $pagerData)
     ?>
 </div>
-<div class="grid_19" >
-    <form id="form_pres_<?php echo $this->detalleProducto['IdProducto'] ?>" action="/carrito-compras/registrar-producto" method="Post">
-        <input type="hidden" id="hidden_idproducto_<?php echo $this->detalleProducto['IdProducto'] ?>" name="slugProducto" value="<?php echo $this->detalleProducto['Slug'] ?>" />
-        <div class ="detailImageProduct">
-            <div id="ImagenPrinc">
-            </div>
-            <div id="listImagen">
-                <div id="imagen">
-                </div>
-            </div>
-        </div>
-        <div class="detailDescProduct">
-            <div id="titleProduct">
-                <h4><?php echo $this->detalleProducto['Nombre']; ?></h4>
-            </div>
-            <div id="descriptionDetail">
-                <?php echo $this->detalleProducto['Descripcion']; ?>
-            </div>
-            <div  id="precioDetail">
-                Precio Oferta :<span><?php echo $this->detalleProducto['PrecioOferta']; ?></span>
-                Precio:<span><?php echo $this->detalleProducto['PrecioVenta']; ?></span>
-            </div>
-            <div class="cantProduct">
-                <select id="text_cant_<?php echo $this->detalleProducto['IdProducto'] ?>" 
-                        name="cantidad" >
-                            <?php for ($i = 1; $i <= 20; $i++) { ?>
-                        <option value="<?php echo $i; ?>">    
-                            <?php echo $i; ?>
-                        </option>
-                    <?php } ?>
-                </select>
-            </div>
-            <div class="button" >
-                <a href="/carrito-compras" id="ajax_id_product_<?php echo $this->detalleProducto['IdProducto'] ?>" rel="ajax_id_product_<?php echo $this->detalleProducto['IdProducto'] ?>"  title="Añadir al carrito">
-                    Añadir al carrito
-                </a>
-            </div>
-            <div class="ListSocialMedia">
-                <div>
-                    facebook
-                </div>
-                <div>
-                    twiter
-                </div>
-                <div>
-                    email
-                </div>
-            </div>
-
-        </div>
+<div class="productos_colum_derc" >
+    <?php if (!$this->detalleProducto && $this->detalleProducto->_idProducto != '') { ?>
         <div>
+            No hay productos a mostrar
         </div>
-        Columna Derecha
-        
-        <?PHP
-        /* lista de productos relacionados */
-        //print_r($this->productosRelacionados);
-        ?>
-    </form>
+    <?php } else { ?>
+
+        <form id="form_pres_<?php echo $this->detalleProducto->_idProducto ?>" action="/carrito-compras/registrar-producto" method="Post">
+            <input type="hidden" id="hidden_idproducto_<?php echo $this->detalleProducto['_idProducto'] ?>" name="slugProducto" value="<?php echo $this->detalleProducto['_slugProducto'] ?>" />
+            <div class ="detailImageProduct">
+                <div id="listImagen">
+                    <div id="imagenMain">
+                        <img src="<?php echo CST_Server_ServerDinamic::getUrl();?>/img/imagen-producto/<?php echo $this->imagenProducto[0]['NombreImagenProducto']; ?>"/>
+                    </div>
+                    <div id="imagenMinContent">
+                    <?php foreach($this->imagenProducto as $index){ ?>
+                    <div id="imagenMin">
+                        <img width="60" src="<?php echo CST_Server_ServerDinamic::getUrl();?>/img/imagen-producto/<?php echo $index['NombreImagenProducto']; ?>"/>
+                    </div>
+                    <?php } ?>
+                    </div>
+                </div>
+            </div>
+            <div class="detailDescProduct">
+                <div id="titleProduct">
+                    <h2><?php echo $this->detalleProducto['_nombreProducto']; ?></h2>
+                </div>
+                <div id="descriptionDetail">
+                    <?php echo $this->detalleProducto['_descricionProducto']; ?>
+                </div>
+                <br/>
+                <div class="cantProduct">
+                    <select id="text_cant_<?php echo $this->detalleProducto['_idProducto']; ?>" 
+                            name="cantidad" >
+                                <?php for ($i = 1; $i <= 20; $i++) { ?>
+                            <option value="<?php echo $i; ?>">    
+                                <?php echo $i; ?>
+                            </option>
+                        <?php } ?>
+                    </select>
+                </div>
+                <div class="button floatFleft"  >
+                    <a href="/carrito-compras" id="ajax_id_product_<?php echo $this->detalleProducto['_idProducto'] ?>" rel="ajax_id_product_<?php echo $this->detalleProducto['_idProducto'] ?>"  title="Añadir al carrito">
+                        <img src="<?php echo CST_Server_ServerStatic::getUrl();?>/images/btcotizar.jpg" alt="Conozca más"/>
+                    </a>
+                </div>
+                
+                <div class="clear">
+                </div>
+                <br/>    
+                
+                <div class="listSocialMedia">
+                    <div>
+                        <img src="<?php echo CST_Server_ServerStatic::getUrl(); ?>/images/redes-sociales/facebook.jpg" />
+                    </div>
+                    <div>
+                        <img src="<?php echo CST_Server_ServerStatic::getUrl(); ?>/images/redes-sociales/twitter.jpg" />
+                    </div>
+                    <div>
+                        <img/>
+                    </div>
+                </div>
+            </div>
+            <div>
+            </div>
+        </form>
+    <?php } ?>
 </div>
