--- a/application/modules/default/views/scripts/productos/index.phtml
+++ b/application/modules/default/views/scripts/productos/index.phtml
@@ -3,6 +3,7 @@
     $pagerData = array(
         'getPathInfo' => $this->getPathInfo,
         'listaMarcas' => $this->listaMarcas,
+        'slugMarcaFiltro' => $this->slugMarca,
         'listaCategoriasNavigator' => $this->listaCategoriasNavigator
     );
     echo $this->partial('/partial/menucategorias.phtml', $pagerData)
