--- a/application/modules/default/views/scripts/soluciones/index.phtml
+++ b/application/modules/default/views/scripts/soluciones/index.phtml
@@ -1,12 +1,54 @@
-<div class="grid_5" >
-    Columna Izquierda
-    <?php 
-    $pagerData = array(
-        'getPathInfo'=>$this->getPathInfo,
-        'listaCategoriasNavigator'=>$this->listaCategoriasNavigator
-            );
-    echo $this->partial('/partial/menucategorias.phtml',$pagerData) ?>
-</div>
-<div class="grid_19" >
-    Columna Derecha
+<div class="ListaMarcas">
+    <ul>
+        <?php foreach ($this->soluciones as $index => $valor): ?>
+            <li class="ItemSoluciones">
+                <div class="ItemSolucionesImagen">
+                    <img src="<?php echo CST_Server_ServerDinamic::getUrl();?>/img/imagen-categoria-soluciones/<?php echo $this->soluciones[$index][0]['ImagenCategoriaSoluciones']; ?>"/>
+                </div>
+                <div class="ItemSolucionesNombre">
+                    <?php echo $this->soluciones[$index][0]['NombreCategoriaSoluciones']; ?>
+                </div>
+                <div class="clear"></div>
+                <div class="ItemSolucionesLinkAll"> 
+                    <div class="ItemSolucionesLinkAllLeft">
+                    </div>
+                    <div class="ItemSolucionesLinkAllCenter">
+                    <a href="/soluciones/<?php echo $this->soluciones[$index][0]['SlugCategoriaSolucion']; ?>" >
+                        Todas las soluciones
+                    </a>    
+                    </div>
+                    <div class="ItemSolucionesLinkAllRight">
+                    </div>
+                </div>
+                <div class="clear"></div>
+                <hr></hr>
+                <p></p>
+                <div class="ItemSolucionesProductosDestacados">
+                    <div style="font-size: 16px; font-weight: bold; padding-bottom: 15px;">Destacados</div>
+                    <ul>
+                        <?php 
+                        $count=0;
+                        foreach ($valor as $index): 
+                            if($count==2) {break;}
+                            ?>
+                            <li>
+                                <div class="ItemSolucionesProductosDestacadosImagen">
+                                <a href="/soluciones/detalle-solucion/<?php echo $index['SlugSoluciones']; ?>" >
+                                    <img src="<?php echo CST_Server_ServerDinamic::getUrl();?>/img/imagen-soluciones/<?php echo $index['ImagenSoluciones']; ?>" width="16" height="16" align="absmiddle" /> 
+                                </a> 
+                                </div>
+                                <div class="ItemSolucionesProductosDestacadosNombre">
+                                    <a href="/soluciones/detalle-solucion/<?php echo $index['SlugSoluciones']; ?>" ><?php echo $index['NombreSoluciones']; ?> </a>
+                                </div>
+                                <div class="clear"></div>
+                            </li>
+                        <?php 
+                        $count++;
+                        endforeach; ?>
+                    </ul>
+                </div>    
+            </li>
+        <?php endforeach; ?>
+        
+    </ul>
 </div>
