--- a/application/modules/default/views/scripts/productos/detalle-producto.phtml
+++ b/application/modules/default/views/scripts/productos/detalle-producto.phtml
@@ -16,7 +16,7 @@
         </div>
     <?php } else { ?>
 
-        <form id="form_pres_<?php echo $this->detalleProducto->_idProducto ?>" action="/carrito-compras/registrar-producto" method="Post">
+        
             <input type="hidden" id="hidden_idproducto_<?php echo $this->detalleProducto['_idProducto'] ?>" name="slugProducto" value="<?php echo $this->detalleProducto['_slugProducto'] ?>" />
             <div class ="detailImageProduct">
                 <div id="listImagen">
@@ -40,18 +40,9 @@
                     <?php echo $this->detalleProducto['_descricionProducto']; ?>
                 </div>
                 <br/>
-                <div class="cantProduct">
-                    <select id="text_cant_<?php echo $this->detalleProducto['_idProducto']; ?>" 
-                            name="cantidad" >
-                                <?php for ($i = 1; $i <= 20; $i++) { ?>
-                            <option value="<?php echo $i; ?>">    
-                                <?php echo $i; ?>
-                            </option>
-                        <?php } ?>
-                    </select>
-                </div>
+                
                 <div class="button floatFleft"  >
-                    <a href="/carrito-compras" id="ajax_id_product_<?php echo $this->detalleProducto['_idProducto'] ?>" rel="ajax_id_product_<?php echo $this->detalleProducto['_idProducto'] ?>"  title="Añadir al carrito">
+                    <a href="/cotizar/<?php echo $this->detalleProducto['_slugProducto'] ?>" id="ajax_id_product_<?php echo $this->detalleProducto['_idProducto'] ?>" rel="ajax_id_product_<?php echo $this->detalleProducto['_idProducto'] ?>"  title="Cotizar <?php echo $this->detalleProducto['_nombreProducto']; ?>">
                         <img src="<?php echo CST_Server_ServerStatic::getUrl();?>/images/btcotizar.jpg" alt="Conozca más"/>
                     </a>
                 </div>
@@ -74,6 +65,6 @@
             </div>
             <div>
             </div>
-        </form>
+        
     <?php } ?>
 </div>
