--- a/application/modules/default/views/scripts/partial/menucategorias.phtml
+++ b/application/modules/default/views/scripts/partial/menucategorias.phtml
@@ -74,7 +74,7 @@
         </li>
     <?php endforeach;?>
         <li> 
-            <a href="/productos"> <input type="checkbox" name="marcas[]" value=""/> Todas </a>
+            <a href="<?php echo CST_Server_ServerBaseUrl::getUrl();?>/productos"> <input type="checkbox" name="marcas[]" value=""/> Todas </a>
         </li>
     </ul>
 </div>
