--- a/application/modules/default/views/scripts/paginator/ProductFor.phtml
+++ b/application/modules/default/views/scripts/paginator/ProductFor.phtml
@@ -7,9 +7,9 @@
         <!-- Previous page link -->
         <?php if (isset($this->previous)): ?>
             <?php if ($this->slug != '') { ?>
-                <a href="/buscar/<?php echo $this->slug; ?>/page/<?php echo $this->previous ?>">
+                <a href="<?php echo CST_Server_ServerBaseUrl::getUrl();?>/buscar/<?php echo $this->slug; ?>/page/<?php echo $this->previous ?>">
                 <?php } else { ?>      
-                    <a href="/buscar/page/<?php echo $this->previous; ?>">    
+                    <a href="<?php echo CST_Server_ServerBaseUrl::getUrl();?>/buscar/page/<?php echo $this->previous; ?>">    
                     <?php } ?> 
 
 
@@ -23,9 +23,9 @@
             <?php foreach ($this->pagesInRange as $page): ?>
                 <?php if ($page != $this->current): ?>
                     <?php if ($this->slug != '') { ?>
-                        <a class="page"  href="/buscar/<?php echo $this->slug; ?>/page/<?php echo $page ?>">
+                        <a class="page"  href="<?php echo CST_Server_ServerBaseUrl::getUrl();?>/buscar/<?php echo $this->slug; ?>/page/<?php echo $page ?>">
                         <?php } else { ?>      
-                            <a href="/buscar/page/<?php echo $page ?>">    
+                            <a href="<?php echo CST_Server_ServerBaseUrl::getUrl();?>/buscar/page/<?php echo $page ?>">    
                             <?php } ?> 
 
 
@@ -39,9 +39,9 @@
                 <!-- Next page link -->
                 <?php if (isset($this->next)): ?>
                     <?php if ($this->slug != '') { ?>
-                        <a href="/buscar/<?php echo $this->slug; ?>/page/<?php echo $this->next; ?>">
+                        <a href="<?php echo CST_Server_ServerBaseUrl::getUrl();?>/buscar/<?php echo $this->slug; ?>/page/<?php echo $this->next; ?>">
                         <?php } else { ?>      
-                            <a href="/buscar/page/<?php echo $this->next; ?>">    
+                            <a href="<?php echo CST_Server_ServerBaseUrl::getUrl();?>/buscar/page/<?php echo $this->next; ?>">    
                             <?php } ?>      
                             Next &gt;
                         </a>
