--- a/application/modules/default/views/scripts/partial/listaProductosPaginator.phtml
+++ b/application/modules/default/views/scripts/partial/listaProductosPaginator.phtml
@@ -19,7 +19,7 @@
                                 <a href="<?php echo CST_Server_ServerBaseUrl::getUrl(); ?>/productos/detalle-producto/<?php echo $index['SlugProducto'] ?>" title="Ver">
                                     Ver <img src="<?php echo CST_Server_ServerStatic::getUrl(); ?>/images/double_arrow_right.gif" alt="Conozca más"/>
                                 </a>
-                                <a style="float: right" href="<?php echo CST_Server_ServerBaseUrl::getUrl(); ?>/cotizar-productos" id="ajax_id_product_<?php echo $index['IdProducto'] ?>" rel="ajax_id_product_<?php echo $index['IdProducto'] ?>"  title="Cotizar <?php echo $index['NombreProducto'] ?>">
+                                <a style="float: right" href="<?php echo CST_Server_ServerBaseUrl::getUrl(); ?>/cotizar/<?php echo $index['SlugProducto'] ?>" id="ajax_id_product_<?php echo $index['IdProducto'] ?>" rel="ajax_id_product_<?php echo $index['IdProducto'] ?>"  title="Cotizar <?php echo $index['NombreProducto'] ?>">
                                     <img src="<?php echo CST_Server_ServerStatic::getUrl(); ?>/images/btcotizar.jpg" alt="Conozca más"/>
                                 </a>
                                 
